--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ name: Steve Austin
 job_title: UI/UX Engineer
 email: youremail@gmail.com
 description: I build great products at Google, currently Google Maps. I also enjoy capturing moments with my camera and discovering new music. Follow me Twitter or drop me a line.
-avatar: https://s3.amazonaws.com/uifaces/faces/twitter/dancounsell/128.jpg
+avatar: https://mopitz199.github.io/blog/assets/images/profile-circular.png
 favicon: /favicon.ico
 twitter_handler: your_handler
 analytics_code: UA-XXXXXXX-2
