--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # General Settings
-name: Steve Austin
-job_title: UI/UX Engineer
-email: youremail@gmail.com
+name: Maximiliano Opitz T.
+job_title: Software Engineer
+email: mopitz199@gmail.com
 description: I build great products at Google, currently Google Maps. I also enjoy capturing moments with my camera and discovering new music. Follow me Twitter or drop me a line.
 avatar: https://mopitz199.github.io/blog/assets/images/profile-circular.png
 favicon: /favicon.ico
