--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # General Settings
-name: Steve Austin
+name: Maximiliano Opitz
 job_title: UI/UX Engineer
 email: youremail@gmail.com
 description: I build great products at Google, currently Google Maps. I also enjoy capturing moments with my camera and discovering new music. Follow me Twitter or drop me a line.
