--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 name: Maximiliano Opitz Turra
 job_title: Software Engineer
 email: mopitz199@gmail.com
-description: I'm a full stack coder, mainly in frameworks like Django, Ionic 2 and React Native. Also working in teams with Git and standardizing the develops environments with Vagrant or Docker. Welcome to contact me in the bellow social networks.
+description: I'm a full stack coder, mainly in frameworks like Django and React Native. Also I've been working in teams with Git and standardizing the develops environments with Docker or Vagrant. Welcome to contact me in the bellow social networks.
 avatar: /assets/perfil.jpg
 favicon: /favicon.ico
 twitter_handler: your_handler
